<resources>
    <string name="app_name">Agbr Bucaramanga Pilotos</string>
    <string name="facebook_app_id">178971555977384</string>
    <string name="datos">Piloto</string>
    <string name="moto">Moto</string>
    <string name="contac">Contacto</string>
    <string name="home">Inicio</string>
    <string name="mensualidad">Mensualidad</string>
    <string name="prof">Info</string>
    <string name="cuenta">Cuenta</string>
    <string name="fallaM">Fallas</string>
    <string name="contactNu"># Emergencias</string>
    <string name="evento">Eventos</string>
    <string name="info">Información de usuario</string>
    <string name="name1">Nombres</string>
    <string name="id">Identificador</string>
    <string name="copyR">Gonobikerreas es una marca registrada ®</string>
    <string name="auth">Queda Prohibido Su Uso Sin La Respectiva Autorización</string>
    <string name="all">Todos los derechos reservados</string>
    <string name="sesion">Cerrar Sesión</string>
    <string name="emer">Número en caso de Emergencia</string>
    <string name="defensa">Defensa Civil Emergencias</string>
    <string name="numDefensa">144</string>
    <string name="cruz">Cruz Roja Emergencias</string>
    <string name="numCruz">132</string>
    <string name="bomberos">Bomberos Emergencias</string>
    <string name="numBom">119</string>
    <string name="policiaSanta">Policía de Santander Emergencias</string>
    <string name="numPol">123</string>
    <string name="polCarre">Policía de carreteras</string>
    <string name="numCare">#767</string>
    <string name="bucara">Estación Bucaramanga</string>
    <string name="numBuca">6712659</string>
    <string name="flori">Estación Florida</string>
    <string name="numFlor">6380771</string>
    <string name="numFlor2">6799729</string>
    <string name="giron">Estación Girón</string>
    <string name="numGiron">6532968</string>
    <string name="numGiron2">6532967</string>
    <string name="lebrija">Estación Lebrija</string>
    <string name="numLebrija">6566305</string>
    <string name="piedecuesta">Estación Piedecuesta</string>
    <string name="numPiede">6550169</string>
    <string name="numPiede2">6540088</string>
    <string name="tvEven">Actualizaciones y notificaciones</string>
    <string name="nota">Nota: Se notificara cuando haya información nueva.</string>
    <string name="Notifac">Notificaciones Y Actualizaciones</string>
    <string name="welcome">Bienvenido</string>
    <string name="base">A la base de datos de Adictos Gbr Bucaramanga</string>
    <string name="sesionLo">Inicie Sesión con :</string>
</resources>
