<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.christianxavier.agbrbucaramangapilotos.Emergencias">

    <include layout="@layout/bottombar"
        android:id="@+id/bottomEm"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/emer"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                tools:layout_editor_absoluteX="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/defensa"
                    android:textColor="@color/textColor" />

                <TextView
                    android:id="@+id/civil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:autoLink="phone"
                    android:clickable="false"
                    android:text="@string/numDefensa"
                    android:textColor="@color/colorAccent" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView6"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
                tools:layout_editor_absoluteX="8dp">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cruz"
                    android:textColor="@color/textColor"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="93dp" />

                <TextView
                    android:id="@+id/cruz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:autoLink="phone"
                    android:text="@string/numCruz"
                    android:textColor="@color/colorAccent"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/linearLayout5"
                android:layout_alignStart="@+id/linearLayout5"
                android:layout_below="@+id/linearLayout5"
                android:layout_marginTop="7dp"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
                tools:layout_editor_absoluteX="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bomberos"
                    android:textColor="@color/textColor" />

                <TextView
                    android:id="@+id/bomberos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:autoLink="phone"
                    android:text="@string/numBom"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
                tools:layout_editor_absoluteX="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/policiaSanta"
                    android:textColor="@color/textColor" />

                <TextView
                    android:id="@+id/policia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:autoLink="phone"
                    android:text="@string/numPol"
                    android:textColor="@color/colorAccent" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
                tools:layout_editor_absoluteX="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/polCarre"
                    android:textColor="@color/textColor" />

                <TextView
                    android:id="@+id/carreteras"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="@string/numCare"
                    android:textColor="@color/colorAccent" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout7"
                tools:layout_editor_absoluteX="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bucara"
                    android:textColor="@color/textColor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:autoLink="phone"
                    android:text="@string/numBuca"
                    android:textColor="@color/textColor" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout8"
                tools:layout_editor_absoluteX="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/flori"
                    android:textColor="@color/textColor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="@string/numFlor"
                    android:textColor="@color/textColor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:text="-"
                    android:textColor="@color/textColor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:autoLink="phone"
                    android:text="@string/numFlor2"
                    android:textColor="@color/textColor" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout9"
                tools:layout_editor_absoluteX="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/giron"
                    android:textColor="@color/textColor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="@string/numGiron"
                    android:textColor="@color/textColor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:text="-"
                    android:textColor="@color/textColor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:autoLink="phone"
                    android:text="@string/numGiron2"
                    android:textColor="@color/textColor" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout10"
                tools:layout_editor_absoluteX="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lebrija"
                    android:textColor="@color/textColor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:autoLink="phone"
                    android:text="@string/numLebrija"
                    android:textColor="@color/textColor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout11"
                tools:layout_editor_absoluteX="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/piedecuesta"
                    android:textColor="@color/textColor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:autoLink="phone"
                    android:text="@string/numPiede"
                    android:textColor="@color/textColor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:text="-"
                    android:textColor="@color/textColor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:autoLink="phone"
                    android:text="@string/numPiede2"
                    android:textColor="@color/textColor" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>
