<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.christianxavier.agbrbucaramangapilotos.vista.Info">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom">

                <android.support.design.widget.BottomNavigationView
                    android:id="@+id/bottomInfo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="0dp"
                    android:background="@color/colorPrimary"
                    app:itemIconTint="@color/colorAccent"
                    app:itemTextColor="@color/textIcon"
                    app:menu="@menu/menuinfo" />
            </LinearLayout>

            <TextView
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:id="@+id/textView2" />

            <TextView
                android:id="@+id/nameInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name1"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/idInfo"
                android:hint="@string/id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textIsSelectable="true"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imagInfo"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/copyR"
                android:textColor="@color/textColor"
                android:textAlignment="center"
                android:textSize="16sp"
                android:layout_marginBottom="13dp"
                android:layout_above="@+id/textView4"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/auth"
                android:textColor="@color/textColor"
                android:textAlignment="center"
                android:textSize="16sp"
                android:layout_above="@+id/textView3"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="20dp"
                android:id="@+id/textView4" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/all"
                android:textColor="@color/textColor"
                android:textAlignment="center"
                android:layout_above="@+id/linearLayout"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/textView3" />

            <Button
                android:id="@+id/btnCerrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/com_facebook_button_background"
                android:text="@string/sesion"
                android:theme="@style/com_facebook_button" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
